# YupiAI

./: .env  .gitignore  Dockerfile  LICENSE  README.md  btconf.py  main_hook.py  main_pol.py  main_web.py  pyproject.toml
app/ai/: aiaudio.py  aigenimage.py  aigentext.py  aimain.py  aisearch.py  aispeech.py  scrape.py  search_internet.py
app/handlers/: __init__.py  ss.py  start.py
app/utils/: allowed_users.py  bbs.py  default_commands.py  history.py  logger.py  pdf_to_text.py  scrape.py  text.py  translate_prompt.py
